Regression: Mesh edit context menus do not open with the last used option under the cursor #107422

Closed
opened 2023-04-28 06:40:08 +02:00 by Thomas Barlow · 1 comment
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.4.0 and 3.6.0 Alpha, branch: main, commit date: 2023-04-25 23:13, hash: 91020ccde15a
Worked: 3.3.6

Caused by 99e5024e97

Short description of error
The Vertex/Edge/Face Context Menu does not open with the last used option under the mouse cursor.

(other context menus such as the Object Context Menu, Dope Sheet Context Menu, Curve Context Menu etc. work as expected)

Exact steps for others to reproduce the error

  1. Select a mesh and enter edit mode
  2. Open the context menu (usually right-mouse or w)
  3. Select Split (or any other option)
  4. Move the mouse towards the middle of Blender's window vertically so that there will be enough space above and below for the context menu to fit without having to be moved vertically
  5. Open the context menu again
  6. The context menu should open with the last used option under the mouse cursor

3.3.6 with --factory-startup:
3_3_6_mesh_edit_context_menu.mp4
3.4.0 with --factory-startup:
3_4_0_mesh_edit_context_menu.mp4

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.4.0 and 3.6.0 Alpha, branch: main, commit date: 2023-04-25 23:13, hash: `91020ccde15a` Worked: 3.3.6 Caused by 99e5024e97 **Short description of error** The Vertex/Edge/Face Context Menu does not open with the last used option under the mouse cursor. (other context menus such as the Object Context Menu, Dope Sheet Context Menu, Curve Context Menu etc. work as expected) **Exact steps for others to reproduce the error** 1. Select a mesh and enter edit mode 1. Open the context menu (usually `right-mouse` or `w`) 1. Select `Split` (or any other option) 1. Move the mouse towards the middle of Blender's window vertically so that there will be enough space above and below for the context menu to fit without having to be moved vertically 1. Open the context menu again 1. The context menu should open with the last used option under the mouse cursor 3.3.6 with `--factory-startup`: [3_3_6_mesh_edit_context_menu.mp4](/attachments/7723238c-6dba-4f91-959f-7540f9d6f30a) 3.4.0 with `--factory-startup`: [3_4_0_mesh_edit_context_menu.mp4](/attachments/e4aa85b2-040c-4374-9705-6e2b9643c0a8)
Thomas Barlow added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-28 06:40:08 +02:00
Member

Can confirm, will check

Can confirm, will check
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-28 08:53:35 +02:00
Philipp Oeser self-assigned this 2023-04-28 10:32:21 +02:00
Philipp Oeser added
Module
User Interface
Priority
High
and removed
Priority
Normal
labels 2023-04-28 11:43:17 +02:00
Philipp Oeser changed title from Mesh edit context menus do not open with the last used option under the cursor to Regression: Mesh edit context menus do not open with the last used option under the cursor 2023-04-28 11:43:33 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-17 10:41:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107422
No description provided.